plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	maven {
		name = "Terraformers"
		url = "https://maven.terraformersmc.com/"
	}
	mavenCentral()
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"music-delay-reducer" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	compileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
	localRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"
	include "com.googlecode.soundlibs:mp3spi:1.9.5.4"
	include "com.googlecode.soundlibs:jlayer:1.0.1.4"
	include "com.googlecode.soundlibs:tritonus-share:0.3.7.4"
	implementation "com.googlecode.soundlibs:mp3spi:1.9.5.4"
	implementation "com.googlecode.soundlibs:jlayer:1.0.1.4"
	implementation "com.googlecode.soundlibs:tritonus-share:0.3.7.4"
	include "com.googlecode.soundlibs:vorbisspi:1.0.3.3"
	include "com.googlecode.soundlibs:jorbis:0.0.17.4"
	include "org.jflac:jflac-codec:1.5.2"
	implementation "com.googlecode.soundlibs:vorbisspi:1.0.3.3"
	implementation "com.googlecode.soundlibs:jorbis:0.0.17.4"
	implementation "org.jflac:jflac-codec:1.5.2"
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	repositories {
	}
}
